devops/sonarqube/sonarqube-deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarqube
  namespace: sonarqube-ns
spec:
  clusterIP: None
  selector:
    app: sonarqube
  ports:
    - port: 9000
      targetPort: 9000
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sonarqube
  namespace: sonarqube-ns
spec:
  serviceName: sonarqube
  replicas: 1
  selector:
    matchLabels:
      app: sonarqube
  template:
    metadata:
      labels:
        app: sonarqube
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: sonarqube
          image: shixiaochuangk8s/sonarqube:10.7.0-community-zh
          ports:
            - containerPort: 9000

          livenessProbe:
            httpGet:
              path: /sessions/new
              port: 9000
            initialDelaySeconds: 60
            periodSeconds: 30

          readinessProbe:
            httpGet:
              path: /sessions/new
              port: 9000
            initialDelaySeconds: 60
            periodSeconds: 30
            failureThreshold: 6

          resources:
            limits:
              cpu: 3000m
              memory: 6Gi
            requests:
              cpu: 1500m
              memory: 4Gi

          volumeMounts:
            - name: sonarqube-storage
              mountPath: /opt/sonarqube/data
              subPath: data
            - name: sonarqube-storage
              mountPath: /opt/sonarqube/conf
              subPath: conf

  volumeClaimTemplates:
    - metadata:
        name: sonarqube-storage
      spec:
        accessModes: [ "ReadWriteOnce" ]
        storageClassName: rook-ceph-block
        resources:
          requests:
            storage: 20Gi
