devops/sonarqube/sonarqube-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarqube-web
  namespace: sonarqube-ns
spec:
  type: ClusterIP
  selector:
    app: sonarqube
  ports:
  - port: 9000
    targetPort: 9000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarqube-ingress
  namespace: sonarqube-ns
spec:
  ingressClassName: nginx
  rules:
  - host: sonarqube.shixiaochuang.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sonarqube-web
            port:
              number: 9000
